# unprinted-receipts

./: .gitignore  README.md  config.example.toml  logging_config.example.json  pyproject.toml
.github/workflows/: test.yaml
src/: auth_credentials_context.py  config.py  dodo_is_context.py  enums.py  exceptions.py  filters.py  logger.py  main.py  mappers.py  message_queue.py  new_types.py  tasks_executor.py  time_helpers.py  units.py
src/connections/: __init__.py  auth_credentials_storage.py  dodo_is.py  helpers.py  units_storage.py
src/context/: auth_credentials.py  dodo_is.py  shifts.py
src/dependencies/: __init__.py  auth_credentials_context.py  connections.py  dodo_is_context.py  http_clients.py
src/models/: __init__.py  auth_credentials.py  detailed_orders.py  dodo_is.py  events.py  order_history_items.py  orders.py  partial_orders.py  shifts.py  units.py
src/parsers/: __init__.py  auth_credentials.py  detailed_orders.py  partial_orders.py  shift_management.py  units.py
tests/factories/: __init__.py  detailed_orders.py  partial_orders.py
tests/test_connections/: test_auth_credentials_storage.py  test_retry_on_failure.py  test_units_storage.py
tests/test_filters/: test_filter_shift_manager_account_names.py  test_is_canceled_by_employee.py  test_is_courier_assigned.py  test_is_order_sales_channel.py  test_is_valid_canceled_order.py
tests/test_models/: test_detailed_orders.py
tests/test_parsers/: test_auth_credentials.py  test_units.py
tests/test_parsers/test_partial_orders/: no_orders.html  single_order.html  test_no_partial_orders.py  test_single_order.py
